# voice-agent

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  RUNBOOK.md  pyproject.toml
client/: audio.py  chat.py  endpointer.py  listener.py  llm.py  player.py  stt.py  transcribe_test.py  tts.py  vad.py  voice.py  voice_hands_free.py  voice_stream.py
server/: SETUP.md  pyproject.toml  stt_service.py  tts_service.py
shared/: config.py  config.toml  metrics.py  text.py
specs/: phase-1-walking-skeleton.md  phase-2-streaming.md  phase-3-hands-free.md
tests/: test_endpointer.py  test_text.py
